--- a/lettre_20250930_180921.tex
+++ b/lettre_20250930_180921.tex
@@ -1,44 +1,156 @@
-\documentclass[11pt,a4paper]{letter}
+\documentclass[12pt]{article}
+
 \usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage{lmodern}
 \usepackage{geometry}
-\geometry{top=2.5cm, bottom=2.5cm, left=2.5cm, right=2.5cm}
-\usepackage{hyperref}
+\usepackage{tgpagella}
+\usepackage{multicol}
+\usepackage{fontawesome5}
 \usepackage{xcolor}
-\usepackage{enumitem}
+\usepackage{lipsum}
 
-% Couleurs
-\definecolor{accent}{HTML}{2E86C1}
-\definecolor{secondary}{HTML}{34495E}
+\geometry{
+  a4paper,
+  left=10mm,
+  right=10mm,
+  bottom=13mm,
+  top=13mm
+}
 
-% Personnalisation du corps de lettre
-\renewcommand{\familydefault}{\sfdefault}
-\setlength{\parskip}{0.75em}
-\setlength{\parindent}{0pt}
+\pagestyle{empty}
 
-% Informations de l'expéditeur
-\newcommand{\CandidateName}{Aziz BELHADJ SAYAR}
-\newcommand{\CompanyName}{EY}
-\newcommand{\Position}{Stage DevOps}
-\newcommand{\TodayDate}{30 septembre 2025}
+%%%%%%%%%%%% Change your first/lastname below %%%%%%%%%%%%
 
-\date{\TodayDate}
+\newcommand{\firstname}{Here}
+\newcommand{\lastname}{Your Name}
+
+%%%%%%%%%%%%% Macros %%%%%%%%%%%%%
+
+%%%%%%%%%%%%% Colors %%%%%%%%%%%%%
+
+\definecolor{blueSky}{RGB}{49, 120, 198}
+\definecolor{orangeFruit}{RGB}{224, 128, 44}
+\definecolor{redBlood}{RGB}{188, 20, 20}
+\definecolor{grayShy}{RGB}{153, 150, 142}
+
+\newcommand{\mainColor}{redBlood} % pick a color above, or add a custom one
+
+%%%%%%%%%%%%% Spaces %%%%%%%%%%%%%
+
+\newlength{\spacebox}
+\settowidth{\spacebox}{123456789}
+
+% Horizontal %
+
+\newcommand{\xhspace}{\hspace*{0.1em}}
+\newcommand{\shspace}{\hspace*{0.8em}}
+
+% Vertical %
+
+\newcommand{\xvspace}{\vspace*{0.1em}}
+\newcommand{\svspace}{\vspace*{0.5em}}
+\newcommand{\mvspace}{\vspace*{1.5em}}
+\newcommand{\hvspace}{\vspace*{2.5em}}
+
+\newcommand{\negxvspace}{\vspace*{-0.2em}}
+\newcommand{\negsvspace}{\vspace*{-0.5em}}
+\newcommand{\negmvspace}{\vspace*{-1em}}
+\newcommand{\neghvspace}{\vspace*{-1.5em}}
+
+%%% Personal Details Macro %%%
+
+\newcommand{\userInfo}[4]{
+    \begin{flushleft}
+        \color{\mainColor}
+        \Huge
+        \textbf{\MakeUppercase{\lastname}}
+        \color{black}
+        \textbf{\firstname}
+        \color{\mainColor}
+        \noindent\rule{19.1cm}{0.8pt}
+        \color{grayShy}
+        \small
+        \par
+        \parbox{7\spacebox} {
+            \faMap \shspace #1 - #2 \par \svspace
+            \faPhone \shspace #3 \par \svspace
+            \faEnvelopeOpen \shspace \texttt{#4} \par \svspace
+        }
+        \color{\mainColor}
+        \mvspace
+    \end{flushleft}
+    \negmvspace
+}
+
+%%% Company Details Macro %%%
+
+\newcommand{\companyInfo}[4]{
+    \begin{flushright}
+        \parbox{4\spacebox}{
+            \raggedleft
+            \small
+            \textbf{\today}\par
+            \xvspace
+            \textbf{#1}\par
+            \mvspace
+            \color{grayShy} \textsc{\MakeLowercase{#2}}\par
+            \xvspace
+            \textsc{\MakeLowercase{#3}}\par
+            \xvspace
+            \textsc{\MakeLowercase{#4}}\par 
+            \color{black}
+        }
+    \end{flushright} 
+    \hvspace
+}
+
+%%% RE Macro %%%
+
+\newcommand{\object}[1]{
+    \small
+    \color{\mainColor} \textbf{RE :} \color{black} \textbf{#1} \par
+}
+
+%%% Content Macro %%%
+
+\newcommand{\content}[2]{
+    \mvspace
+    \begin{flushleft}
+        \parbox{10.3\spacebox}{
+          #1\par
+          \svspace
+          #2
+        }\par
+    \end{flushleft}
+}
+
+%%% Signature Macro %%%
+
+\newcommand{\signature}{
+    \svspace
+    \parbox{3\spacebox}{
+      Sincerly,\par
+      \svspace \hspace{-0.3em}
+      \textbf{\color{\mainColor} \MakeUppercase{\lastname} \color{black} \firstname}\par
+      \svspace \svspace
+      \Huge \faPenNib\par
+    }\par
+}
+
+%%%%%%%%%%%% Your cover letter below %%%%%%%%%%%%
 
 \begin{document}
+\fontfamily{phv}\selectfont
+\userInfo{2708 N University Dr}{33322 Sunrise, Florida}{(000) 000-0000}{your.name@gmail.com}
+\companyInfo{XYZStartup}{Mr./Mrs. X, CEO}{1741 Tomlinson RD}{19116 Philadelphia, Pennsylvania}
+\object{Lorem ipsum dolor sit amet, consectetur adipiscing elit}
+\content{
+  Dear Mr./Mrs. X, \\
+  
+  \lipsum[1-1] \\
 
-\begin{letter}{\textcolor{accent}{\CompanyName} \\ Service Recrutement}
+  \lipsum[3-3] \\
 
-\opening{Madame, Monsieur,}
-
-Je suis actuellement étudiant en Master informatique, spécialisation DevOps, et je souhaite mettre à profit mes compétences techniques et mon sens de l’initiative au sein de \textcolor{accent}{\CompanyName} pour votre poste de \textbf{\Position}.  
-Au cours de mes précédentes expériences, j’ai pu développer une solide expertise sur les plateformes cloud (AWS, Azure) et sur les outils d’automatisation (Docker, Kubernetes, Terraform, GitLab CI/CD). En parallèle, j’ai mené plusieurs projets de déploiement continu et d’infrastructure as code, ce qui m’a permis de réduire les délais de mise en production de 30 % tout en renforçant la sécurité des pipelines grâce à l’intégration de scans de vulnérabilités et de contrôles d’accès basés sur les rôles.
-
-Ce qui me motive particulièrement à rejoindre \textcolor{accent}{\CompanyName} est votre engagement envers l’innovation et la qualité, ainsi que votre approche collaborative qui favorise l’apprentissage continu. Je suis convaincu que mes compétences techniques, ma capacité à travailler en équipe et ma volonté d’apporter des solutions agiles et sécurisées s’alignent parfaitement avec les valeurs de votre organisation.
-
-Je serais ravi de pouvoir échanger plus en détail sur la manière dont je pourrais contribuer à vos projets et à la réussite de votre équipe. Je vous remercie par avance pour l’attention portée à ma candidature et reste à votre disposition pour un entretien.
-
-\closing{Veuillez agréer, Madame, Monsieur, l’expression de mes salutations distinguées.\\[1ex] \CandidateName}
-
-\end{letter}
+  \lipsum[5-5] \\
+}{I look forward to any opportunity to discuss the position and what I can do for your company.}
+\signature
 \end{document}
