--- a/lettre_20250930_180921.tex
+++ b/lettre_20250930_180921.tex
@@ -1,156 +1,84 @@
-\documentclass[12pt]{article}
+\documentclass[11pt, a4paper, roman]{letter}
 
-\usepackage[utf8]{inputenc}
-\usepackage{geometry}
-\usepackage{tgpagella}
-\usepackage{multicol}
-\usepackage{fontawesome5}
-\usepackage{xcolor}
-\usepackage{lipsum}
+\usepackage[top = 12mm, bottom = 12mm, left=10mm, right=10mm]{geometry} %determines page margins / document formatting
+\usepackage[T1]{fontenc}  % We are using pdfLaTeX,
+\usepackage[utf8]{inputenc} %allows direct input of accented characters
+\usepackage{ragged2e} %allows for right aligned / left aligned text instead of all justified
 
-\geometry{
-  a4paper,
-  left=10mm,
-  right=10mm,
-  bottom=13mm,
-  top=13mm
-}
+\usepackage[UKenglish]{babel} %sets hypenation / spelling etc
+\usepackage[stretch = 25, shrink = 25]{microtype}  %for better formatting of words in a line / sentence
+
+
+\usepackage{graphicx} %Required for inserting images
+\usepackage{fontawesome} %for nice icons
+
+\usepackage{fancyhdr} %to create header and footer
+
+\usepackage{enumitem} % To redefine spacing in lists
+
+\usepackage{xcolor} %To add colour to the document
+\definecolor{cvteal}{HTML}{008080} %Change this to be any hexcode
+\definecolor{cvblue}{HTML}{304263} %Change this to be any hexcode
+\usepackage[colorlinks = true, urlcolor = black, linkcolor = white]{hyperref}
+\usepackage{lipsum} %Generate dummy text
+\begin{document}
 
 \pagestyle{empty}
+\raggedbottom
 
-%%%%%%%%%%%% Change your first/lastname below %%%%%%%%%%%%
+\begin{minipage}[t]{0.5\textwidth}
+    \vspace*{\fill}
+    \textsc{{\Huge First Last}, {\LARGE PhD}} %Name & Suffix if appropriate
+    \vspace*{\fill}
+\end{minipage}\hfill
+\begin{minipage}[t]{0.3\textwidth}
+    \setlength{\baselineskip}{15pt}
+    \RaggedLeft 
+    \faMobile{} Phone Number\\
+    \faHome{} City/ Country\\ 
+    \faEnvelope {} email ID\\ 
+    \faLinkedinSquare{} in/linedin profuke
+\end{minipage}
 
-\newcommand{\firstname}{Here}
-\newcommand{\lastname}{Your Name}
+{\color{cvteal} \rule{\linewidth}{1mm}}
 
-%%%%%%%%%%%%% Macros %%%%%%%%%%%%%
+\begin{minipage}[t]{\textwidth}
 
-%%%%%%%%%%%%% Colors %%%%%%%%%%%%%
+    \begin{letter} {HR/ Hiring Manager\\Address line 1\\
+Address line 2\\Town/ City\\County\\Post-code} %receipients address
+\setlength{\parskip}{5pt} %set inter-parapgraph distance
+\setlength{\baselineskip}{15pt} %set inter-line distance
+    \opening{Dear Manager}
 
-\definecolor{blueSky}{RGB}{49, 120, 198}
-\definecolor{orangeFruit}{RGB}{224, 128, 44}
-\definecolor{redBlood}{RGB}{188, 20, 20}
-\definecolor{grayShy}{RGB}{153, 150, 142}
+    \begin{center} {\textbf{Position:} \underline{Job Title / Name (Vacancy ID)}} \end{center}
 
-\newcommand{\mainColor}{redBlood} % pick a color above, or add a custom one
+\setlength{\parskip}{20pt}
 
-%%%%%%%%%%%%% Spaces %%%%%%%%%%%%%
+\justifying{
+\lipsum[1-4]
+}   
+\end{letter}
+\end{minipage}
 
-\newlength{\spacebox}
-\settowidth{\spacebox}{123456789}
+\vspace*{\fill}
+{\color{cvteal} \rule{\linewidth}{1mm}}
 
-% Horizontal %
+\newpage
 
-\newcommand{\xhspace}{\hspace*{0.1em}}
-\newcommand{\shspace}{\hspace*{0.8em}}
+\newpage
+{\color{cvteal} \rule{\linewidth}{1mm}}
 
-% Vertical %
+{
+\setlength{\parskip}{10pt}
+\setlength{\parindent}{10pt}
+\setlength{\baselineskip}{15pt}
 
-\newcommand{\xvspace}{\vspace*{0.1em}}
-\newcommand{\svspace}{\vspace*{0.5em}}
-\newcommand{\mvspace}{\vspace*{1.5em}}
-\newcommand{\hvspace}{\vspace*{2.5em}}
-
-\newcommand{\negxvspace}{\vspace*{-0.2em}}
-\newcommand{\negsvspace}{\vspace*{-0.5em}}
-\newcommand{\negmvspace}{\vspace*{-1em}}
-\newcommand{\neghvspace}{\vspace*{-1.5em}}
-
-%%% Personal Details Macro %%%
-
-\newcommand{\userInfo}[4]{
-    \begin{flushleft}
-        \color{\mainColor}
-        \Huge
-        \textbf{\MakeUppercase{\lastname}}
-        \color{black}
-        \textbf{\firstname}
-        \color{\mainColor}
-        \noindent\rule{19.1cm}{0.8pt}
-        \color{grayShy}
-        \small
-        \par
-        \parbox{7\spacebox} {
-            \faMap \shspace #1 - #2 \par \svspace
-            \faPhone \shspace #3 \par \svspace
-            \faEnvelopeOpen \shspace \texttt{#4} \par \svspace
-        }
-        \color{\mainColor}
-        \mvspace
-    \end{flushleft}
-    \negmvspace
+\lipsum[1-7]
 }
 
-%%% Company Details Macro %%%
+Yours sincerely,\\\textbf{Your Name}
 
-\newcommand{\companyInfo}[4]{
-    \begin{flushright}
-        \parbox{4\spacebox}{
-            \raggedleft
-            \small
-            \textbf{\today}\par
-            \xvspace
-            \textbf{#1}\par
-            \mvspace
-            \color{grayShy} \textsc{\MakeLowercase{#2}}\par
-            \xvspace
-            \textsc{\MakeLowercase{#3}}\par
-            \xvspace
-            \textsc{\MakeLowercase{#4}}\par 
-            \color{black}
-        }
-    \end{flushright} 
-    \hvspace
-}
+\vspace*{\fill}
 
-%%% RE Macro %%%
-
-\newcommand{\object}[1]{
-    \small
-    \color{\mainColor} \textbf{RE :} \color{black} \textbf{#1} \par
-}
-
-%%% Content Macro %%%
-
-\newcommand{\content}[2]{
-    \mvspace
-    \begin{flushleft}
-        \parbox{10.3\spacebox}{
-          #1\par
-          \svspace
-          #2
-        }\par
-    \end{flushleft}
-}
-
-%%% Signature Macro %%%
-
-\newcommand{\signature}{
-    \svspace
-    \parbox{3\spacebox}{
-      Sincerly,\par
-      \svspace \hspace{-0.3em}
-      \textbf{\color{\mainColor} \MakeUppercase{\lastname} \color{black} \firstname}\par
-      \svspace \svspace
-      \Huge \faPenNib\par
-    }\par
-}
-
-%%%%%%%%%%%% Your cover letter below %%%%%%%%%%%%
-
-\begin{document}
-\fontfamily{phv}\selectfont
-\userInfo{2708 N University Dr}{33322 Sunrise, Florida}{(000) 000-0000}{your.name@gmail.com}
-\companyInfo{XYZStartup}{Mr./Mrs. X, CEO}{1741 Tomlinson RD}{19116 Philadelphia, Pennsylvania}
-\object{Lorem ipsum dolor sit amet, consectetur adipiscing elit}
-\content{
-  Dear Mr./Mrs. X, \\
-  
-  \lipsum[1-1] \\
-
-  \lipsum[3-3] \\
-
-  \lipsum[5-5] \\
-}{I look forward to any opportunity to discuss the position and what I can do for your company.}
-\signature
+{\color{cvteal} \rule{\linewidth}{1mm}}
 \end{document}
