--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -82,7 +82,8 @@
 
 \vspace*{-1.25cm} % Pull logo into the top margin
 
-\hfill\includegraphics[width=0.3\textwidth]{logo.pdf} % Right-aligned logo
+%\hfill\includegraphics[width=0.3\textwidth]{logo.pdf} % Right-aligned logo
+
 
 \vspace{-0.5cm} % Pull the rule closer to the logo
 
