--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -1,156 +1,305 @@
-\documentclass[12pt]{article}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Lined Cover Letter
+% LaTeX Template
+% Version 3.0 (February 14, 2023)
+%
+% This template originates from:
+% https://www.LaTeXTemplates.com
+%
+% Author:
+% Vel (vel@LaTeXTemplates.com)
+%
+% License:
+% CC BY-NC-SA 4.0 (https://creativecommons.org/licenses/by-nc-sa/4.0/)
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\usepackage[utf8]{inputenc}
-\usepackage{geometry}
-\usepackage{tgpagella}
-\usepackage{multicol}
-\usepackage{fontawesome5}
-\usepackage{xcolor}
-\usepackage{lipsum}
+%----------------------------------------------------------------------------------------
+%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
+%----------------------------------------------------------------------------------------
 
-\geometry{
-  a4paper,
-  left=10mm,
-  right=10mm,
-  bottom=13mm,
-  top=13mm
+\documentclass[
+	12pt, % Default font size
+]{letter}
+
+\usepackage{graphicx} % Required for including images
+
+%----------------------------------------------------------------------------------------
+%	MARGINS
+%----------------------------------------------------------------------------------------
+
+\usepackage[
+	a4paper, % Paper size, use letterpaper for US letter paper
+	top=2cm, % Top margin
+	bottom=2.5cm, % Bottom margin
+	left=2cm, % Left margin
+	right=2cm, % Right margin
+	headsep=0.8cm, % Space from the top margin to the baseline of the header
+	footskip=1.2cm, % Space from the bottom margin to the baseline of the footer
+	%showframe % Uncomment to show frames around the margins for debugging purposes
+]{geometry}
+
+\setlength{\parindent}{0pt} % Paragraph indentation
+\setlength{\parskip}{1em} % Vertical space between paragraphs
+
+%----------------------------------------------------------------------------------------
+%	FONTS
+%----------------------------------------------------------------------------------------
+
+\usepackage[utf8]{inputenc} % Required for inputting international characters
+\usepackage[T1]{fontenc} % Output font encoding for international characters
+
+\usepackage{XCharter} % Use the XCharter fonts
+
+%----------------------------------------------------------------------------------------
+%	HEADERS AND FOOTERS
+%----------------------------------------------------------------------------------------
+
+\usepackage{fancyhdr} % Required for customizing headers and footers
+
+\fancypagestyle{firstpage}{%
+	\fancyhf{} % Clear default headers/footers
+	\renewcommand{\headrulewidth}{0pt} % No header rule
+	\renewcommand{\footrulewidth}{1pt} % Footer rule thickness
 }
 
-\pagestyle{empty}
-
-%%%%%%%%%%%% Change your first/lastname below %%%%%%%%%%%%
-
-\newcommand{\firstname}{Here}
-\newcommand{\lastname}{Your Name}
-
-%%%%%%%%%%%%% Macros %%%%%%%%%%%%%
-
-%%%%%%%%%%%%% Colors %%%%%%%%%%%%%
-
-\definecolor{blueSky}{RGB}{49, 120, 198}
-\definecolor{orangeFruit}{RGB}{224, 128, 44}
-\definecolor{redBlood}{RGB}{188, 20, 20}
-\definecolor{grayShy}{RGB}{153, 150, 142}
-
-\newcommand{\mainColor}{redBlood} % pick a color above, or add a custom one
-
-%%%%%%%%%%%%% Spaces %%%%%%%%%%%%%
-
-\newlength{\spacebox}
-\settowidth{\spacebox}{123456789}
-
-% Horizontal %
-
-\newcommand{\xhspace}{\hspace*{0.1em}}
-\newcommand{\shspace}{\hspace*{0.8em}}
-
-% Vertical %
-
-\newcommand{\xvspace}{\vspace*{0.1em}}
-\newcommand{\svspace}{\vspace*{0.5em}}
-\newcommand{\mvspace}{\vspace*{1.5em}}
-\newcommand{\hvspace}{\vspace*{2.5em}}
-
-\newcommand{\negxvspace}{\vspace*{-0.2em}}
-\newcommand{\negsvspace}{\vspace*{-0.5em}}
-\newcommand{\negmvspace}{\vspace*{-1em}}
-\newcommand{\neghvspace}{\vspace*{-1.5em}}
-
-%%% Personal Details Macro %%%
-
-\newcommand{\userInfo}[4]{
-    \begin{flushleft}
-        \color{\mainColor}
-        \Huge
-        \textbf{\MakeUppercase{\lastname}}
-        \color{black}
-        \textbf{\firstname}
-        \color{\mainColor}
-        \noindent\rule{19.1cm}{0.8pt}
-        \color{grayShy}
-        \small
-        \par
-        \parbox{7\spacebox} {
-            \faMap \shspace #1 - #2 \par \svspace
-            \faPhone \shspace #3 \par \svspace
-            \faEnvelopeOpen \shspace \texttt{#4} \par \svspace
-        }
-        \color{\mainColor}
-        \mvspace
-    \end{flushleft}
-    \negmvspace
+\fancypagestyle{subsequentpages}{%
+	\fancyhf{} % Clear default headers/footers
+	\renewcommand{\headrulewidth}{1pt} % Header rule thickness
+	\renewcommand{\footrulewidth}{1pt} % Footer rule thickness
 }
 
-%%% Company Details Macro %%%
+\AtBeginDocument{\thispagestyle{firstpage}} % Use the first page headers/footers style on the first page
+\pagestyle{subsequentpages} % Use the subsequent pages headers/footers style on subsequent pages
 
-\newcommand{\companyInfo}[4]{
-    \begin{flushright}
-        \parbox{4\spacebox}{
-            \raggedleft
-            \small
-            \textbf{\today}\par
-            \xvspace
-            \textbf{#1}\par
-            \mvspace
-            \color{grayShy} \textsc{\MakeLowercase{#2}}\par
-            \xvspace
-            \textsc{\MakeLowercase{#3}}\par
-            \xvspace
-            \textsc{\MakeLowercase{#4}}\par 
-            \color{black}
-        }
-    \end{flushright} 
-    \hvspace
-}
-
-%%% RE Macro %%%
-
-\newcommand{\object}[1]{
-    \small
-    \color{\mainColor} \textbf{RE :} \color{black} \textbf{#1} \par
-}
-
-%%% Content Macro %%%
-
-\newcommand{\content}[2]{
-    \mvspace
-    \begin{flushleft}
-        \parbox{10.3\spacebox}{
-          #1\par
-          \svspace
-          #2
-        }\par
-    \end{flushleft}
-}
-
-%%% Signature Macro %%%
-
-\newcommand{\signature}{
-    \svspace
-    \parbox{3\spacebox}{
-      Sincerly,\par
-      \svspace \hspace{-0.3em}
-      \textbf{\color{\mainColor} \MakeUppercase{\lastname} \color{black} \firstname}\par
-      \svspace \svspace
-      \Huge \faPenNib\par
-    }\par
-}
-
-%%%%%%%%%%%% Your cover letter below %%%%%%%%%%%%
+%----------------------------------------------------------------------------------------
 
 \begin{document}
-\fontfamily{phv}\selectfont
-\userInfo{2708 N University Dr}{33322 Sunrise, Florida}{(000) 000-0000}{your.name@gmail.com}
-\companyInfo{XYZStartup}{Mr./Mrs. X, CEO}{1741 Tomlinson RD}{19116 Philadelphia, Pennsylvania}
-\object{Lorem ipsum dolor sit amet, consectetur adipiscing elit}
-\content{
-  Dear Mr./Mrs. X, \\
-  
-  \lipsum[1-1] \\
 
-  \lipsum[3-3] \\
+%----------------------------------------------------------------------------------------
+%	FIRST PAGE HEADER
+%----------------------------------------------------------------------------------------
 
-  \lipsum[5-5] \\
-}{I look forward to any opportunity to discuss the position and what I can do for your company.}
-\signature
+\vspace*{-1.25cm} % Pull logo into the top margin
+
+%\hfill\includegraphics[width=0.3\textwidth]{logo.pdf} % Right-aligned logo
+
+
+\vspace{-0.5cm} % Pull the rule closer to the logo
+
+\rule{\linewidth}{1pt} % Horizontal rule
+
+\medskip % Vertical whitespace
+
+%----------------------------------------------------------------------------------------
+%	YOUR NAME AND CONTACT INFORMATION
+%----------------------------------------------------------------------------------------
+
+\begingroup
+	\raggedleft % Right align text
+	\small % Font size
+	Dr. John Dorian \\ % Your name
+	5384 N Broadway Ave \\ % Your address
+	Trotwood, Ohio 45426 \\
+	+1 (937) 837-1234 \\ % Your phone number
+	john@latextemplates.com\\ % Your email address
+	\bigskip % Vertical whitespace
+	{\normalsize\textit{\today}}\\ % Date
+\endgroup
+
+%----------------------------------------------------------------------------------------
+%	ADDRESSEE AND GREETING
+%----------------------------------------------------------------------------------------
+
+\begingroup
+	% Name and address of the person to whom the letter is being sent
+	Dr. Robert Kelso \\
+	Chief of Medicine \\
+	Sacred Heart Hospital \\
+	12629 Riverside Drive \\
+	North Hollywood, L.A. 91607
+\endgroup
+
+\bigskip % Vertical whitespace
+
+\textbf{Cover Letter for Residency Position}
+
+\medskip % Vertical whitespace
+
+Dear Dr. Kelso,
+
+\smallskip % Vertical whitespace
+
+%----------------------------------------------------------------------------------------
+%	LETTER CONTENT
+%----------------------------------------------------------------------------------------
+
+PARAGRAPH ONE: State the reason for the letter, name the position or type of work you are applying for and identify the source from which you learned of the opening (i.e. career development center, website, employment service, personal contact).
+
+PARAGRAPH TWO: Indicate why you are interested in the position, the company, its products, services -- above all, stress what you can do for the employer. If you are a recent graduate, explain how your academic background makes you a qualified candidate for the position. If you have practical work experience, point out specific achievements or unique qualifications. Try not to repeat the same information the reader will find in the resume. Refer the reader to the enclosed resume or application which summarizes your qualifications, training, and experiences. The purpose of this section is to strengthen your resume by providing details which bring your experiences to life.
+
+PARAGRAPH THREE: Request a personal interview and indicate your flexibility as to the time and place. Repeat your phone number in the letter and offer assistance to help in a speedy response. For example, state that you will be in the city where the company is located on a certain date and would like to set up an interview. Alternatively, state that you will call on a certain date to set up an interview. End the letter by thanking the employer for taking time to consider your credentials.
+
+\smallskip % Vertical whitespace
+
+Sincerely yours,
+
+\bigskip\bigskip\bigskip % Vertical whitespace
+
+Dr. John Dorian, M.D.
+
+%----------------------------------------------------------------------------------------
+
+\end{document}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Lined Cover Letter
+% LaTeX Template
+% Version 3.0 (February 14, 2023)
+%
+% This template originates from:
+% https://www.LaTeXTemplates.com
+%
+% Author:
+% Vel (vel@LaTeXTemplates.com)
+%
+% License:
+% CC BY-NC-SA 4.0 (https://creativecommons.org/licenses/by-nc-sa/4.0/)
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%----------------------------------------------------------------------------------------
+%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
+%----------------------------------------------------------------------------------------
+
+\documentclass[
+	12pt, % Default font size
+]{letter}
+
+\usepackage{graphicx} % Required for including images
+
+%----------------------------------------------------------------------------------------
+%	MARGINS
+%----------------------------------------------------------------------------------------
+
+\usepackage[
+	a4paper, % Paper size, use letterpaper for US letter paper
+	top=2cm, % Top margin
+	bottom=2.5cm, % Bottom margin
+	left=2cm, % Left margin
+	right=2cm, % Right margin
+	headsep=0.8cm, % Space from the top margin to the baseline of the header
+	footskip=1.2cm, % Space from the bottom margin to the baseline of the footer
+	%showframe % Uncomment to show frames around the margins for debugging purposes
+]{geometry}
+
+\setlength{\parindent}{0pt} % Paragraph indentation
+\setlength{\parskip}{1em} % Vertical space between paragraphs
+
+%----------------------------------------------------------------------------------------
+%	FONTS
+%----------------------------------------------------------------------------------------
+
+\usepackage[utf8]{inputenc} % Required for inputting international characters
+\usepackage[T1]{fontenc} % Output font encoding for international characters
+
+\usepackage{XCharter} % Use the XCharter fonts
+
+%----------------------------------------------------------------------------------------
+%	HEADERS AND FOOTERS
+%----------------------------------------------------------------------------------------
+
+\usepackage{fancyhdr} % Required for customizing headers and footers
+
+\fancypagestyle{firstpage}{%
+	\fancyhf{} % Clear default headers/footers
+	\renewcommand{\headrulewidth}{0pt} % No header rule
+	\renewcommand{\footrulewidth}{1pt} % Footer rule thickness
+}
+
+\fancypagestyle{subsequentpages}{%
+	\fancyhf{} % Clear default headers/footers
+	\renewcommand{\headrulewidth}{1pt} % Header rule thickness
+	\renewcommand{\footrulewidth}{1pt} % Footer rule thickness
+}
+
+\AtBeginDocument{\thispagestyle{firstpage}} % Use the first page headers/footers style on the first page
+\pagestyle{subsequentpages} % Use the subsequent pages headers/footers style on subsequent pages
+
+%----------------------------------------------------------------------------------------
+
+\begin{document}
+
+%----------------------------------------------------------------------------------------
+%	FIRST PAGE HEADER
+%----------------------------------------------------------------------------------------
+
+\vspace*{-1.25cm} % Pull logo into the top margin
+
+%\hfill\includegraphics[width=0.3\textwidth]{logo.pdf} % Right-aligned logo
+
+
+\vspace{-0.5cm} % Pull the rule closer to the logo
+
+\rule{\linewidth}{1pt} % Horizontal rule
+
+\medskip % Vertical whitespace
+
+%----------------------------------------------------------------------------------------
+%	YOUR NAME AND CONTACT INFORMATION
+%----------------------------------------------------------------------------------------
+
+\begingroup
+	\raggedleft % Right align text
+	\small % Font size
+	Dr. John Dorian \\ % Your name
+	5384 N Broadway Ave \\ % Your address
+	Trotwood, Ohio 45426 \\
+	+1 (937) 837-1234 \\ % Your phone number
+	john@latextemplates.com\\ % Your email address
+	\bigskip % Vertical whitespace
+	{\normalsize\textit{\today}}\\ % Date
+\endgroup
+
+%----------------------------------------------------------------------------------------
+%	ADDRESSEE AND GREETING
+%----------------------------------------------------------------------------------------
+
+\begingroup
+	% Name and address of the person to whom the letter is being sent
+	Dr. Robert Kelso \\
+	Chief of Medicine \\
+	Sacred Heart Hospital \\
+	12629 Riverside Drive \\
+	North Hollywood, L.A. 91607
+\endgroup
+
+\bigskip % Vertical whitespace
+
+\textbf{Cover Letter for Residency Position}
+
+\medskip % Vertical whitespace
+
+Dear Dr. Kelso,
+
+\smallskip % Vertical whitespace
+
+%----------------------------------------------------------------------------------------
+%	LETTER CONTENT
+%----------------------------------------------------------------------------------------
+
+PARAGRAPH ONE: State the reason for the letter, name the position or type of work you are applying for and identify the source from which you learned of the opening (i.e. career development center, website, employment service, personal contact).
+
+PARAGRAPH TWO: Indicate why you are interested in the position, the company, its products, services -- above all, stress what you can do for the employer. If you are a recent graduate, explain how your academic background makes you a qualified candidate for the position. If you have practical work experience, point out specific achievements or unique qualifications. Try not to repeat the same information the reader will find in the resume. Refer the reader to the enclosed resume or application which summarizes your qualifications, training, and experiences. The purpose of this section is to strengthen your resume by providing details which bring your experiences to life.
+
+PARAGRAPH THREE: Request a personal interview and indicate your flexibility as to the time and place. Repeat your phone number in the letter and offer assistance to help in a speedy response. For example, state that you will be in the city where the company is located on a certain date and would like to set up an interview. Alternatively, state that you will call on a certain date to set up an interview. End the letter by thanking the employer for taking time to consider your credentials.
+
+\smallskip % Vertical whitespace
+
+Sincerely yours,
+
+\bigskip\bigskip\bigskip % Vertical whitespace
+
+Dr. John Dorian, M.D.
+
+%----------------------------------------------------------------------------------------
+
 \end{document}
