--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -296,7 +296,7 @@ PARAGRAPH THREE: Request a personal interview and indicate your flexibility as t
 
 Sincerely yours,
 
-\bigskip\bigskip\bigskip % Vertical whitespace
+\bigskip
 
 Dr. John Dorian, M.D.
 
