--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -31,9 +31,9 @@
 \pagestyle{empty} 
 
 % ==== Photo ====
-\begin{textblock*}{3cm}(14cm,0.5cm)
-\includegraphics[width=3cm]{tempimg.jpg}
-\end{textblock*}
+% \begin{textblock*}{3cm}(14cm,0.5cm)
+% \includegraphics[width=3cm]{tempimg.jpg}
+% \end{textblock*}
 
 % ==== Header ====
 {\Huge\bfseries AZIZ BELHADJ SAYAR}\\[2pt]
