--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -44,8 +44,8 @@
 \setlength{\tabcolsep}{6pt}
 \noindent
 \begin{tabular*}{0.8\textwidth}{@{\extracolsep{\fill}} l l l}
-    \faPhone* +33 6 52 64 32 02 & 
-    \faMapMarker* Paris, France & 
+    \faPhone +33 6 52 64 32 02 & 
+    \faMapMarker Paris, France & 
     \faGithub \href{https://github.com/azizbelhadjsayar}{ github.com/azizbelhadjsayar} \\
     \faEnvelope \href{mailto:aziz.belhadj@example.com}{ aziz.belhadj@example.com} & 
     \faLinkedin \href{https://linkedin.com/in/azizbelhadjsayar}  { linkedin.com/in/azizbelhadjsayar} & 
@@ -63,8 +63,8 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \section*{Education}
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Université Paris-Saclay} & \textbf{Paris, France \faMapMarker*} \\
-\textbf{MSc 1 – Software Engineering for the Web} & \textbf{2024 -- 2025 \faCalendar*} \\
+\textbf{Université Paris-Saclay} & \textbf{Paris, France \faMapMarker} \\
+\textbf{MSc 1 – Software Engineering for the Web} & \textbf{2024 -- 2025 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{$\rightarrow$}]
     \item Courses: Software Engineering, Web Development, Databases
@@ -75,8 +75,8 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{IHEC Carthage} & \textbf{Tunis, Tunisia \faMapMarker*} \\
-\textbf{Bachelor’s in Business Computing (Business Intelligence)} & \textbf{2021 -- 2024 \faCalendar*} \\
+\textbf{IHEC Carthage} & \textbf{Tunis, Tunisia \faMapMarker} \\
+\textbf{Bachelor’s in Business Computing (Business Intelligence)} & \textbf{2021 -- 2024 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{red}{$\rightarrow$}]
     \item Courses: Business Intelligence, SQL, Data Analysis
@@ -88,7 +88,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
 \textbf{Tech Solutions} & \textbf{Paris, France \faMapMarker*} \\
-\textbf{Junior Web Developer} & \textbf{2023 -- 2024 \faCalendar*} \\
+\textbf{Junior Web Developer} & \textbf{2023 -- 2024 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{green}{$\rightarrow$}]
     \item Developed an internal web application using Python and Angular
@@ -100,7 +100,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \section*{Projects}
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Interactive Dashboard (Python, Streamlit)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar*} \\
+\textbf{Interactive Dashboard (Python, Streamlit)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{orange}{$\rightarrow$}]
     \item Data analysis and visualization of real-world datasets with interactive charts.
@@ -109,7 +109,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \vspace{0.1cm}
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Gesture-Controlled Game (Python, OpenCV, MediaPipe)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2023 \faCalendar*} \\
+\textbf{Gesture-Controlled Game (Python, OpenCV, MediaPipe)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2023 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{orange}{$\rightarrow$}]
     \item Interactive game using real-time hand movement detection.
@@ -118,7 +118,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \vspace{0.1cm}
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Library Management App (Java Swing, MySQL)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2023 \faCalendar*} \\
+\textbf{Library Management App (Java Swing, MySQL)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2023 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{orange}{$\rightarrow$}]
     \item Desktop app featuring barcode generation, scanning, and email alerts.
