--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -31,9 +31,9 @@
 \pagestyle{empty} 
 
 % ==== Photo ====
-% \begin{textblock*}{3cm}(14cm,0.5cm)
-% \includegraphics[width=3cm]{tempimg.jpg}
-% \end{textblock*}
+\begin{textblock*}{3cm}(14cm,0.5cm)
+\includegraphics[width=3cm]{Profil-removebg.png}
+\end{textblock*}
 
 % ==== Header ====
 {\Huge\bfseries AZIZ BELHADJ SAYAR}\\[2pt]
@@ -87,7 +87,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \section*{Professional Experience}
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Tech Solutions} & \textbf{Paris, France \faMapMarker*} \\
+\textbf{Tech Solutions} & \textbf{Paris, France \faMapMarker} \\
 \textbf{Junior Web Developer} & \textbf{2023 -- 2024 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{green}{$\rightarrow$}]
@@ -127,7 +127,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \vspace{0.1cm}
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{HR Management App (C\#, .NET, SQL Server)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2022 \faCalendar*} \\
+\textbf{HR Management App (C\#, .NET, SQL Server)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2022 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{orange}{$\rightarrow$}]
     \item Full CRUD management of employees, locations, departments, and jobs.
