Adjust layout and font size in contact section

--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -31,7 +31,7 @@
 \pagestyle{empty} 
 
 % ==== Photo ====
-\begin{textblock*}{3cm}(14cm,0.5cm)
+\begin{textblock*}{3cm}(17cm,0.5cm)
 \includegraphics[width=3cm]{Profil-removebg.png}
 \end{textblock*}
 
@@ -43,14 +43,16 @@
 \renewcommand{\arraystretch}{0.9}
 \setlength{\tabcolsep}{6pt}
 \noindent
-\begin{tabular*}{0.8\textwidth}{@{\extracolsep{\fill}} l l l}
-    \faPhone +33 6 52 64 32 02 & 
-    \faMapMarker Paris, France & 
+{\fontsize{9}{10}\selectfont  % 8pt font with 10pt line spacing
+\begin{tabular*}{0.6\textwidth}{@{\extracolsep{\fill}} l l l}
+    \faPhone +33 6 52 64 32 02 & 
+    \faMapMarker Paris, France & 
     \faGithub \href{https://github.com/azizbelhadjsayar}{ github.com/azizbelhadjsayar} \\
     \faEnvelope \href{mailto:aziz.belhadj@example.com}{ aziz.belhadj@example.com} & 
     \faLinkedin \href{https://linkedin.com/in/azizbelhadjsayar}  { linkedin.com/in/azizbelhadjsayar} & 
     \faLink \href{https://portfolio.aziz.dev}{ portfolio.aziz.dev} \\
 \end{tabular*}
+}
 
 \vspace{-0.1cm}
 
