--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -56,9 +56,9 @@
     \faPhone +33 6 52 64 32 02 & 
     \faMapMarker Paris, France & 
     \faGithub \href{https://github.com/azizbelhadjsayar}{ github.com/azizbelhadjsayar} \\
-    \faEnvelope \href{mailto:aziz.belhadj@example.com}{ aziz.belhadj@example.com} & 
-    \faLinkedin \href{https://linkedin.com/in/azizbelhadjsayar}  { linkedin.com/in/azizbelhadjsayar} & 
-    \faLink \href{https://portfolio.aziz.dev}{ portfolio.aziz.dev} \\
+    \faEnvelope \href{mailto:aziz.belhadjsayar@etud.univ-evry.fr}{ aziz.belhadjsayar@etud.univ-evry.fr} & 
+    \faLinkedin \href{https://linkedin.com/in/azizbelhadjsayar}  { linkedin.com/in/azizbelhadjsayar} \\
+    % \faLink \href{https://portfolio.aziz.dev}{ portfolio.aziz.dev} \\
 \end{tabular*}
 }
 
