--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -29,7 +29,7 @@
 
 % Colored section commands
 \newcommand{\ProfileSection}[0]{\section*{\textcolor{blue}{Profile}}}
-\newcommand{\EducationSection}[1]{\section*{\textcolor{red}{Education}}}
+\newcommand{\EducationSection}[0]{\section*{\textcolor{red}{Education}}}
 \newcommand{\ExperienceSection}[0]{\section*{\textcolor{green}{Professional Experience}}}
 \newcommand{\ProjectsSection}[0]{\section*{\textcolor{orange}{Projects}}}
 \newcommand{\CertificationsSection}[0]{\section*{\textcolor{purple}{Certifications}}}
@@ -54,9 +54,9 @@
 {\fontsize{9.5}{10}\selectfont
 \begin{tabular*}{0.6\textwidth}{@{\extracolsep{\fill}} l l l}
     \faPhone +33 6 52 64 32 02 &
-    \faGithub \href{https://github.com/azizbelhadjsayar}{ github.com/azizbelhadjsayar} \\
+    \faGithub \href{https://github.com/azizbelhadjsayar}{ github.com/azizbelhadjsayar} &
+    \faEnvelope \href{mailto:aziz.belhadjsayar@etud.univ-evry.fr}{ aziz.belhadjsayar@etud.univ-evry.fr} \\
     \faMapMarker Paris, France & 
-    \faEnvelope \href{mailto:aziz.belhadjsayar@etud.univ-evry.fr}{ aziz.belhadjsayar@etud.univ-evry.fr} & 
     \faLinkedin \href{https://linkedin.com/in/azizbelhadjsayar}  { linkedin.com/in/azizbelhadjsayar} \\
     % \faLink \href{https://portfolio.aziz.dev}{ portfolio.aziz.dev} \\
 \end{tabular*}
