--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -165,7 +165,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 % ==== Languages ====
 \LanguagesSection
 \textbf{English:} C2 – \href{https://cert.efset.org/6YsT6y}{\underline{EF SET C2} \faLink} \textbf{ | }
-\textbf{French:} C2 – \href{https://www.france-education-international.fr/test/dalf}{\underline{TCF C2} \faLink} \textbf{ | }
+\textbf{French:} C2 – \href{https://drive.google.com/file/d/1yojzT_8XB7gIulaIKh8TSYeOl8NBXxpR/view}{\underline{TCF C2} \faLink} \textbf{ | }
 \textbf{Arabic:} Native
 
 \vspace{-0.3cm}
