--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -54,10 +54,11 @@
 {\fontsize{9.5}{10}\selectfont
 \begin{tabular*}{0.6\textwidth}{@{\extracolsep{\fill}} l l l}
     \faPhone +33 6 52 64 32 02 &
-    \faGithub \href{https://github.com/azizbelhadjsayar}{ github.com/azizbelhadjsayar} &
+    \faLinkedin \href{https://linkedin.com/in/azizbelhadjsayar}{ linkedin.com/in/azizbelhadjsayar} &
     \faEnvelope \href{mailto:aziz.belhadjsayar@etud.univ-evry.fr}{ aziz.belhadjsayar@etud.univ-evry.fr} \\
-    \faMapMarker Paris, France & 
-    \faLinkedin \href{https://linkedin.com/in/azizbelhadjsayar}  { linkedin.com/in/azizbelhadjsayar} \\
+    \faMapMarker Paris, France &
+    \faGithub \href{https://github.com/azizbelhadjsayar}{ github.com/azizbelhadjsayar} \\
+    
     % \faLink \href{https://portfolio.aziz.dev}{ portfolio.aziz.dev} \\
 \end{tabular*}
 }
