Adjust spacing in header section

--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -47,6 +47,7 @@
 {\Huge\bfseries AZIZ BELHADJ SAYAR}\\[2pt]
 {\large Computer Science Student}\\[2pt]
 
+\vspace{-0.2cm}
 % ==== Contact ====
 \renewcommand{\arraystretch}{0.9}
 \setlength{\tabcolsep}{6pt}
