--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -46,23 +46,8 @@
 \pagestyle{empty} 
 
 % ==== Photo ====
-% ==== Photo (Right-side corners rounded) ====
-\begin{textblock*}{3.5cm}(16.5cm,0.83cm)
-\begin{tcolorbox}[
-    colback=white,
-    colframe=white,
-    boxrule=0pt,
-    enhanced,
-    width=3.5cm,
-    height=3.5cm,
-    arc=12pt,
-    top=0pt, bottom=0pt, left=0pt, right=0pt,
-    sharp corners=north west,
-    sharp corners=south west,
-    clip, % <- important, this clips the content (image) to the shape
-]
-\includegraphics[width=3.5cm,height=3.5cm]{Profil-removebg.png}
-\end{tcolorbox}
+\begin{textblock*}{3cm}(16.5cm,0.83cm)
+\includegraphics[width=3.5cm]{Profil-removebg.png}
 \end{textblock*}
 
 % ==== Header inside a rounded box ====
